--- a/messagelistener-svc.yaml
+++ b/messagelistener-svc.yaml
@@ -11,6 +11,6 @@ spec:
   ports:
     - name: "http"
       protocol: TCP
-      port: 80
+      port: 8081
       targetPort: 8081 
-  type: LoadBalancer
+  type: NodePort
